<resources>
    <string name="app_name">WorkIn</string>
    <string name="title_my_routines">My Routines</string>
    <string name="title_community">Community</string>
    <string name="title_favorites">Favorites</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="workin">WorkIn</string>
    <string name="logInBtn">login</string>
    <string name="no_account">Don\'t have an account</string>
    <string name="sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="app_bar_close">Close</string>
    <string name="app_bar_share">Share</string>
    <string name="app_bar_profile">Profile</string>
    <string name="routine_user_title">Creator</string>
    <string name="routine_date">Creation date</string>
    <string name="routine_difficulty_title">Difficulty</string>
    <string name="routine_score_title">Rating</string>
    <string name="routine_description_title">Description</string>
    <string name="next">Next</string>
    <string name="routine_start_title">Start Routine</string>
    <string name="app_bar_clock">Timer</string>
    <string name="app_bar_list">CheckList</string>
    <string name="app_bar_favorite">Favorite</string>
    <string name="app_bar_search">Search</string>
    <string name="app_bar_sort">Sort</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="details_button">Details</string>
    <string name="remainign_sets_text">remaining sets</string>

    <string name="favorite_yes">This routine has been added to favorites</string>
    <string name="favorite_no">This routine has been removed from favorites</string>

    <string name="cycleRepetitions">%d remaining repetitions</string>

    <!-- ERRORS -->
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_login">Invalid credentials</string>
    <string name="invalid_email">The email is not valid</string>
    <string name="error_params">Error in parameters</string>
    <string name="invalid_name">The first name is not valid</string>
    <string name="invalid_last_name">The last name is not valid</string>
    <string name="invalid_password_conf">The passwords do not match</string>
    <string name="invalid_credentials">Your username/password is not valid</string>
    <string name="unexpected_error">An unexpected error occurred, please try again later</string>
    <string name="logout">Log Out</string>
    <string name="score_text">Congratulations! \nyou have finished this routine. \nDo you want to rate?</string>
    <string name="score_btn">next</string>
    <string name="title_activity_score">Rate Routine</string>

    <string name="query_too_short">Your search is too short! Please make it longer</string>

    <string name="search_text">Showing results for %s, click here to reset search</string>
    <string name="sort_default">Default</string>
    <string name="sort_name">Name</string>
    <string name="sort_date">Date</string>
    <string name="sort_score">Score</string>
    <string name="sort_difficulty">Difficulty</string>
    <string name="sort_category">Category</string>
    <string name="rated">You have rated this routine</string>
    <string name="title_activity_login">Login</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="num_with_seconds">%d s</string>
    <string name="routine_category">Category</string>
    <string name="repetitions_left">Repetitions Left</string>
    <string name="exercise">Exercise</string>
    <string name="remaining_time">Remaining time</string>
    <string name="remaining_sets">Remaining sets</string>
    <string name="confirmed_exit_title">Are you sure you want to exit?</string>
    <string name="confirmed_exit_text">You will lose your progress in the workout</string>
    <string name="exit">Exit</string>
    <string name="continue_dialog">Continue</string>

</resources>