<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/app_bar_search"
        android:title="@string/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="ifRoom|collapseActionView"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/app_bar_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/app_bar_sort"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_default"
                android:checkable="true"
                android:title="@string/sort_default"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_name"
                android:checkable="true"
                android:title="@string/sort_name"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_date"
                android:checkable="true"
                android:title="@string/sort_date"
                app:showAsAction="never" />


            <item
                android:id="@+id/sort_score"
                android:checkable="true"
                android:title="@string/sort_score"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_difficulty"
                android:checkable="true"
                android:title="@string/sort_difficulty"
                app:showAsAction="never" />

            <item
                android:id="@+id/sort_category"
                android:checkable="true"
                android:title="@string/sort_category"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/app_bar_share"
        android:title="@string/app_bar_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_favorite"
        android:title="@string/app_bar_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/workoutSimpleFragment"
        android:title="@string/app_bar_clock"
        android:icon="@drawable/ic_baseline_timer_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/workoutDetailedFragment"
        android:title="@string/app_bar_list"
        android:icon="@drawable/ic_baseline_checklist_24"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_close"
        android:title="@string/app_bar_close"
        android:icon="@drawable/ic_baseline_close_24"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:visible="false"
        android:title="@string/app_bar_profile"
        app:showAsAction="ifRoom" >
        <menu >
            <item
                android:id="@+id/log_out_option"
                app:showAsAction="never"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>